🐛 use a fix offset for the scrollbar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,7 +15,8 @@
 /* custom scrollbar */
 /* TODO: use a transparent background for the track */
 ::-webkit-scrollbar {
-    @apply w-2 h-2;
+    width: 8px;
+	height: 8px;
 }
 
 ::-webkit-scrollbar-track {
